test/errorhandling/bad_filter.result
Error: bad_filter.mss:3:10 [[CODE]!=@x] added to [CODE]=X produces an invalid filter