test/errorhandling/bad_filter.mss
Map { }
@x: 'X';
[CODE='X'][CODE!=@x] { }
